# SpatialBench

./: .gitignore  .gitmodules  LICENSE  README.md  all_scenes.json  index.html  leaderboard.md  pyproject.toml  script.js  styles.css  visualize_benchmark_web.py
.github/workflows/: static.yml
benchmark/: README.md
benchmark/configs/chunk/: da3_streaming_eval.yaml  pi_long_eval.yaml  vggt_long_eval.yaml
benchmark/configs/end2end/: amb3r_eval.yaml  da3_base_eval.yaml  da3_giant_eval.yaml  da3_large_eval.yaml  da3_small_eval.yaml  da3nested_eval.yaml  fastvggt_eval.yaml  mapanything_eval.yaml  omnivggt_eval.yaml  pi3_eval.yaml  pi3x_eval.yaml  vggt_eval.yaml  vggt_omega_eval.yaml  worldmirror_eval.yaml
benchmark/configs/online/: infinitevggt_eval.yaml  lingbot_map_stream_eval.yaml  lingbot_map_window_eval.yaml  page4d_eval.yaml  r3_local_eval.yaml  r3_long_eval.yaml  r3_strided_eval.yaml  stream3r_stream_eval.yaml  stream3r_window_eval.yaml  streamvggt_eval.yaml
benchmark/configs/optimization/: dust3r_eval.yaml  mast3r_eval.yaml
benchmark/configs/prior/: README.md  da3_giant_prior_eval.yaml  danext_prior_eval.yaml  mapanything_prior_eval.yaml  omnivggt_prior_eval.yaml  pi3x_prior_eval.yaml  worldmirror_prior_eval.yaml
benchmark/configs/ttt/: loger_eval.yaml  loger_star_eval.yaml  scal3r_eval.yaml  vgg_ttt_eval.yaml  zipmap_eval.yaml
benchmark/datasets/: benchmark_dataset.py  data_readers.py
benchmark/evaluation/: alignment.py  bench_memory_curve.py  metrics.py  report.py  run_benchmark.py  run_benchmark_with_prior.py
benchmark/evaluation/model_adapters/: __init__.py  amb3r_adapter.py  base_adapter.py  da3_adapter.py  da3_streaming_adapter.py  da3nested_adapter.py  dust3r_adapter.py  fastvggt_adapter.py  infinitevggt_adapter.py  lingbot_map_adapter.py  lingbot_map_stream_adapter.py  loger_adapter.py  mapanything_adapter.py  mast3r_adapter.py  omnivggt_adapter.py  page4d_adapter.py  pi3_adapter.py  pi3x_adapter.py  pi_long_adapter.py  r3_adapter.py  scal3r_adapter.py  stream3r_adapter.py  streamvggt_adapter.py  vgg_ttt_adapter.py  vggt_adapter.py  vggt_long_adapter.py  vggt_omega_adapter.py  worldmirror_adapter.py  zipmap_adapter.py
benchmark/models/amb3r_root/amb3r/: blocks.py  loss.py  model.py
benchmark/models/depth_anything_3/utils/export/: __init__.py
benchmark/models/dust3r_root/dust3r/cloud_opt/: init_im_poses.py
benchmark/models/dust3r_root/dust3r/utils/: path_to_croco.py
benchmark/models/fastvggt/heads/: camera_head.py
benchmark/models/fastvggt/layers/: attention.py
benchmark/models/fastvggt/models/: aggregator.py  vggt.py
benchmark/models/fastvggt/utils/: eval_utils.py  geometry.py
benchmark/models/lingbot_map/aggregator/: stream.py
benchmark/models/lingbot_map/models/: gct_stream.py
benchmark/models/mapanything/models/: __init__.py
benchmark/models/mapanything/models/mapanything/: __init__.py
benchmark/models/mast3r_root/dust3r/: model.py
benchmark/models/mast3r_root/dust3r/cloud_opt/: base_opt.py
benchmark/models/mast3r_root/dust3r/utils/: path_to_croco.py
benchmark/models/mast3r_root/mast3r/: model.py
benchmark/models/mast3r_root/mast3r/cloud_opt/: sparse_ga.py
benchmark/models/mast3r_root/mast3r/utils/: path_to_dust3r.py
benchmark/models/omnivggt/heads/: camera_head.py  dpt_head.py
benchmark/models/omnivggt/layers/: block.py  vision_transformer.py
benchmark/models/omnivggt/models/: aggregator.py  omnivggt.py  omnivggt_aggregator.py
benchmark/models/omnivggt/utils/: geometry.py  misc.py
benchmark/models/page4d/dependency/: projection.py
benchmark/models/page4d/models/: vggt.py
benchmark/models/pi3/models/: pi3x.py
benchmark/models/r3/: .gitignore  README.md  demo.py  environment.yml  infer.py  requirements.txt  setup.py  view.py
benchmark/models/r3/R3/models/: online_utils.py  r3.py
benchmark/models/r3/R3/models/online/: __init__.py  fallback.py  flashinfer_backend.py  kv_cache.py  pose_resolution.py  revisit.py  scale_estimation.py  state.py
benchmark/models/r3/R3/models/r3_wrapper/: __init__.py  constants.py  online_inference.py  outputs.py  paged_kv.py  setup.py
benchmark/models/r3/R3/utils/: config_resolve.py  input_io.py  pose_enc.py  pose_utils.py  render_io.py
benchmark/models/r3/configs/: r3-large.yaml
benchmark/models/r3/depth_anything_3/: api.py  cfg.py
benchmark/models/r3/depth_anything_3/configs/: da3-large-causal.yaml  da3-large.yaml
benchmark/models/r3/depth_anything_3/model/: cam_dec.py  da3.py  dualdpt.py
benchmark/models/r3/depth_anything_3/model/dinov2/: vision_transformer.py
benchmark/models/scal3r/utils/pgo/: processor.py
benchmark/models/stream3r/dust3r/heads/: __init__.py
benchmark/models/streamvggt/models/: streamvggt.py
benchmark/models/vgg_ttt/: LICENSE  README.md  THIRD_PARTY_LICENSES.md
benchmark/models/vgg_ttt/vggttt/: __init__.py
benchmark/models/vgg_ttt/vggttt/data/: utils.py
benchmark/models/vgg_ttt/vggttt/nets/: __init__.py  dist_attention.py  ttt.py  ttt_attention.py
benchmark/models/vgg_ttt/vggttt/utils/: dist.py  dist_att.py  optim.py
benchmark/models/vggt/models/: vggt.py
benchmark/models/vggt/utils/: eval_utils.py
benchmark/scene_indices/: 7scenes_scenes.json  adt_scenes.json  droid_scenes.json  dtu_scenes.json  eth3d_scenes.json  hiroom_scenes.json  kitti_odometry_scenes.json  lingbot_scenes.json  nrgbd_scenes.json  omniworld_scenes.json  rlbench_scenes.json  robolab_scenes.json  robotwin_scenes.json  ropedia_new_scenes.json  ropedia_scenes.json  scannetpp_scenes.json  tanks_and_temples_scenes.json  tum_scenes.json  vkitti_scenes.json  waymo_scenes.json
benchmark/utils/: cropping.py  hf_weights.py  image_ranking.py  misc.py  paths.py  sim3_align.py  visualization.py
data/: dataset_results.json  glb_manifest.json  maintable.tex  results.js
datasets/: 7scenes.tex  adt.tex  droid.tex  dtu.tex  eth3d.tex  hiroom.tex  nrgbd.tex  omniworld.tex  rlbench.tex  robolab.tex  robotwin.tex  scannetpp.tex  tanks_and_temples.tex  tum.tex  vkitti.tex  waymo.tex  xperience.tex
figures/: sampling_trajectories.html  taxonomy_radial.html
(+27 files in other folders)
